<resources>
    <string name="app_name">WFS</string>

    <!-- Web Call Server -->
    <string name="web_call_server_url">wss://194.67.90.21:8443</string>

    <!-- Welcome fragment -->
    <string name="welcome_fragment_title">Добро пожаловать</string>
    <string name="welcome_fragment_welcome_message">Добро пожаловать на %s!</string>
    <string name="welcome_fragment_log_in_button">Войти</string>
    <string name="welcome_fragment_sign_in_button">Регистрация</string>

    <!-- Log in fragment -->
    <string name="log_in_fragment_title">Вход</string>
    <string name="log_in_fragment_user_name">Имя пользователя</string>
    <string name="log_in_fragment_password">Пароль</string>
    <string name="log_in_fragment_log_in_button">Войти</string>

    <!-- Registration fragment -->
    <string name="registration_fragment_title">Регистрация</string>
    <string name="registration_fragment_login">Логин</string>
    <string name="registration_fragment_user_name">Имя пользователя</string>
    <string name="registration_fragment_email">Почта</string>
    <string name="registration_fragment_password">Пароль</string>
    <string name="registration_fragment_confirm_password">Подтвердите пароль</string>
    <string name="registration_fragment_register_button">Регистрация</string>
    <string name="registration_fragment_field_must_be_filled">Поле является обязательным.</string>
    <string name="registration_fragment_field_is_not_necessary">Необязательное поле.</string>
    <string name="registration_fragment_illegal_symbols">Недопустимые символы.</string>
    <string name="registration_fragment_email_format_is_incorrect">Неверный формат.</string>
    <string name="registration_fragment_must_not_start_with_space">Не может начинаться с пробела.</string>
    <string name="registration_fragment_must_not_be_several_spaces_in_a_row">Несколько пробелов подряд недопустмы.</string>
    <string name="registration_fragment_login_min_symbols_count">Минимум %d символов.</string>
    <string name="registration_fragment_login_max_symbols_count">Максимум %d символов.</string>
    <string name="registration_fragment_user_name_min_symbols_count">Минимум %d символов.</string>
    <string name="registration_fragment_user_name_max_symbols_count">Максимум %d символов.</string>
    <string name="registration_fragment_password_max_symbols_count">Максимум %d символов.</string>
    <string name="registration_fragment_email_max_symbols_count">Максимум %d символов.</string>
    <string name="registration_fragment_passwords_do_not_match">Пароли не совпадают.</string>

    <!-- Home fragment -->
    <string name="home_fragment_active_channels">Активные каналы:</string>
    <string name="home_fragment_absence_of_active_channels">Нет активных каналов</string>
    <string name="home_fragment_inactive_channels">Неактивные каналы:</string>
    <string name="home_fragment_absence_of_inactive_channels">Информация появится в одном из следующих обновлений</string>
    <string name="home_fragment_title">Просмотр</string>

    <!-- Broadcast fragment -->
    <string name="broadcast_fragment_chat_coming_soon">Чат появится в одном из следующих обновлений</string>
    <string name="broadcast_fragment_title">Трансляция</string>

    <!-- Streamer home fragment -->
    <string name="profile_fragment_title">Профиль</string>
    <string name="profile_fragment_stream_name">Название трансляции</string>
    <string name="profile_fragment_start_broadcast">Начать трансляцию</string>

    <!-- Streamer home menu -->
    <string name="streamer_home_menu_overflow_item">Ещё</string>
    <string name="streamer_home_menu_log_out">Выйти</string>

    <!-- Camera and microphone permissions fragment -->
    <string name="cam_and_mic_permissions_fragment_title">Разрешения</string>
    <string name="cam_and_mic_permissions_fragment_main_description">Разрешения на использование камеры и микрофона</string>
    <string name="cam_and_mic_permissions_fragment_secondary_description">Еще немного, и вы сможете начать трансляцию.</string>
    <string name="cam_and_mic_permissions_fragment_switch_on_microphone">Включить микрофон</string>
    <string name="cam_and_mic_permissions_fragment_switch_on_camera">Включить камеру</string>
    <string name="cam_and_mic_permissions_fragment_camera_switched_on_text">Камера включена</string>
    <string name="cam_and_mic_permissions_fragment_microphone_switched_on_text">Микрофон включен</string>

    <!-- Stream broadcasting fragment -->
    <string name="stream_broadcasting_fragment_title">Прямой эфир</string>
    <string name="stream_broadcasting_fragment_start_broadcast_button">Начать трансляцию</string>
    <string name="stream_broadcasting_fragment_stop_broadcast_button">Остановить трансляцию</string>

    <!-- Base result code errors -->
    <string name="base_result_code_default_error_message">Не удалось выполнить запрос.</string>

    <!-- Log in result code -->
    <string name="log_in_result_code_success">Вы успешно аторизованы.</string>
    <string name="log_in_result_code_wrong_login_or_password">Неверный логин или пароль.</string>
    <string name="log_in_result_code_unknown">Не удалось авторизоваться.</string>

    <!-- Register result code -->
    <string name="register_result_code_success">Регистрация прошла успешно.</string>
    <string name="register_result_code_login_already_exists">Указанный логин уже используется другим пользователем.</string>
    <string name="register_result_code_user_name_is_already_used">Указанное имя пользователя уже используется.</string>
    <string name="register_result_code_unknown">Не удалось зарегистрироваться по неизвестной причине.</string>

    <!-- Log out result code -->
    <string name="log_out_result_code_success">Вы успешно вышли из аккаунта.</string>
    <string name="log_out_result_code_token_does_not_exist">Пользователь с указанным токеном доступа не существет.</string>
    <string name="log_out_result_code_unknown">Не удалось опубликовать трансляцию.</string>

    <!-- Notify broadcast started result_code -->
    <string name="notify_channel_is_live_result_code_success">Канал в прямом эфире</string>
    <string name="notify_channel_is_live_result_code_token_does_not_exist">Пользователь с указанным токеном доступа не существет.</string>
    <string name="notify_channel_is_live_result_code_channel_is_already_live">Канал уже в прямом эфире.</string>
    <string name="notify_channel_is_live_result_code_unknown">Не удалось выйти в эфир.</string>

    <!-- Notify broadcast stopped result code -->
    <string name="notify_channel_is_offline_result_code_success">Канал ушел в оффлайн.</string>
    <string name="notify_channel_is_offline_result_code_token_does_not_exist">Пользователь с указанным токеном доступа не существет.</string>
    <string name="notify_channel_is_offline_result_code_channel_is_already_offline">Канал уже оффлайн.</string>
    <string name="notify_channel_is_offline_result_code_unknown">Не удалось уйти в оффлайн.</string>

    <!-- Update broadcast name result code -->
    <string name="update_broadcast_name_result_code_success">Название трансляции изменено.</string>
    <string name="update_broadcast_name_result_code_token_does_not_exist">Пользователь с указанным токеном доступа не существет.</string>
    <string name="update_broadcast_name_result_code_unknown">Не удалось изменить название трансляции по неизвестной причине.</string>

    <!-- Started watching broadcast result code -->
    <string name="start_watching_channel_result_code_success">Начался просмотр трансляции данного канала.</string>
    <string name="start_watching_channel_result_code_token_does_not_exist">Пользователь с указанным токеном доступа не существет.</string>
    <string name="start_watching_channel_result_code_channel_does_not_exist">Данный канал не существует.</string>
    <string name="start_watching_channel_result_code_channel_is_offline">Данный канал оффлайн.</string>
    <string name="start_watching_channel_result_code_user_is_already_watching_the_broadcast">Пользователь уже смотрит трансляцию с этого канала.</string>
    <string name="start_watching_channel_result_code_unknown">Не удалось начать просмотр трансляции данного канала по неизвестной причине.</string>

    <!-- Stopped watching broadcast result code -->
    <string name="stop_watching_channel_result_code_success">Вы закончили просмотр трансляции данного канала.</string>
    <string name="stop_watching_channel_result_code_token_does_not_exist">Пользователь с указанным токеном доступа не существет.</string>
    <string name="stop_watching_channel_result_code_channel_does_not_exist">Данный канал не существует.</string>
    <string name="stop_watching_channel_result_code_channel_is_offline">Данный канал оффлайн.</string>
    <string name="stop_watching_channel_result_code_user_is_not_watching_the_broadcast">Пользователь не смотрит трансляцию данного канала в данный момент.</string>
    <string name="stop_watching_channel_result_code_unknown">Не удалось закончить просмотр трансляции данного канала по неизвестной причине.</string>

    <string name="content_is_not_loaded">Произошло что-то странное…\n повторите попытку позже.</string>
</resources>
