<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cam_and_mic_permissions_fragment_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cam_and_mic_permissions_fragment_content_horizontal_margin"
        android:text="@string/cam_and_mic_permissions_fragment_main_description"
        android:textSize="@dimen/header_text_size_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cam_and_mic_permissions_fragment_description"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.4"/>

    <TextView
        android:id="@+id/cam_and_mic_permissions_fragment_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cam_and_mic_permissions_fragment_content_horizontal_margin"
        android:text="@string/cam_and_mic_permissions_fragment_secondary_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cam_and_mic_permissions_fragment_title"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cam_and_mic_permissions_fragment_switch_on_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cam_and_mic_permissions_fragment_content_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:text="@string/cam_and_mic_permissions_fragment_switch_on_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cam_and_mic_permissions_fragment_switch_on_microphone"
        tools:visibility="invisible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cam_and_mic_permissions_fragment_camera_switched_on_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cam_and_mic_permissions_fragment_camera_switched_on_text"
        android:drawableStart="@drawable/ic_check_black_24dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:maxLines="1"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/cam_and_mic_permissions_fragment_switch_on_camera"
        app:layout_constraintEnd_toEndOf="@id/cam_and_mic_permissions_fragment_switch_on_camera"
        app:layout_constraintTop_toTopOf="@id/cam_and_mic_permissions_fragment_switch_on_camera"
        app:layout_constraintBottom_toBottomOf="@id/cam_and_mic_permissions_fragment_switch_on_camera"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cam_and_mic_permissions_fragment_switch_on_microphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/cam_and_mic_permissions_fragment_content_horizontal_margin"
        android:layout_marginBottom="30dp"
        android:text="@string/cam_and_mic_permissions_fragment_switch_on_microphone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cam_and_mic_permissions_fragment_microphone_switched_on_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cam_and_mic_permissions_fragment_microphone_switched_on_text"
        android:drawableStart="@drawable/ic_check_black_24dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:maxLines="1"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/cam_and_mic_permissions_fragment_switch_on_microphone"
        app:layout_constraintEnd_toEndOf="@id/cam_and_mic_permissions_fragment_switch_on_microphone"
        app:layout_constraintTop_toTopOf="@id/cam_and_mic_permissions_fragment_switch_on_microphone"
        app:layout_constraintBottom_toBottomOf="@id/cam_and_mic_permissions_fragment_switch_on_microphone" />

</androidx.constraintlayout.widget.ConstraintLayout>