<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/welcome_fragment_content_horizontal_margin"
        android:text="@string/welcome_fragment_welcome_message"
        android:gravity="center"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_log_in_button"
        app:layout_constraintVertical_chainStyle="packed"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_log_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/welcome_fragment_content_horizontal_margin"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/welcome_fragment_log_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_message"
        app:layout_constraintBottom_toTopOf="@id/welcome_sign_in_button"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/welcome_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/welcome_fragment_content_horizontal_margin"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/welcome_fragment_sign_in_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_log_in_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>