<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/registration_fragment_login_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/registration_fragment_content_horizontal_margin"
            android:layout_marginTop="50dp"
            android:hint="@string/registration_fragment_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:endIconMode="clear_text"
            tools:counterEnabled="true"
            tools:counterMaxLength="15">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_fragment_login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/registration_fragment_user_name_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/registration_fragment_content_horizontal_margin"
            android:layout_marginTop="15dp"
            android:hint="@string/registration_fragment_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_fragment_login_input_layout"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_fragment_user_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/registration_fragment_email_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/registration_fragment_content_horizontal_margin"
            android:layout_marginTop="15dp"
            android:hint="@string/registration_fragment_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_fragment_user_name_input_layout"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_fragment_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/registration_fragment_password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/registration_fragment_content_horizontal_margin"
            android:layout_marginTop="15dp"
            android:hint="@string/registration_fragment_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_fragment_email_input_layout"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_fragment_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/registration_fragment_confirm_password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/registration_fragment_content_horizontal_margin"
            android:layout_marginTop="15dp"
            android:hint="@string/registration_fragment_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_fragment_password_input_layout"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_fragment_confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_fragment_register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/registration_fragment_content_horizontal_margin"
            android:layout_marginVertical="30dp"
            android:textSize="18sp"
            android:text="@string/registration_fragment_register_button"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_fragment_confirm_password_input_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
